# AntiVirus

./: .gitignore  Phase 2 — Business baseline.md  Phase 3 — ATP-grade detection and respon.md  Phase 4 — enterprise scale and commercia.md  README.md  Untitled-9.md  package-lock.json  package.json
.github/workflows/: build.yml
agent/linux/: Makefile  go.mod  go.sum  main.go
agent/linux/ebpf/: sensor.c
agent/macos/: Package.swift
agent/windows/: README.md
agent/windows/service/: CMakeLists.txt  README.md  local-dashboard-security.example.json  pam-policy.example.json  release-promotion.example.json  storage-governance.example.json  support-bundle.example.json  update-trust.example.json  web-protection-policy.example.json
agent/windows/service/build-buttonfix/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  stP1kAlM
agent/windows/service/build-buttonfix/installer-generated/: SetupPayload.rc
agent/windows/service/build-fenrir/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
agent/windows/service/build-fenrir/installer-generated/: SetupPayload.rc
agent/windows/service/build-quiet/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
agent/windows/service/build-quiet/installer-generated/: SetupPayload.rc
agent/windows/service/build-scanfix/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  stP1kAlM
agent/windows/service/build-scanfix/installer-generated/: SetupPayload.rc
agent/windows/service/include/: AgentConfig.h  AgentService.h  AgentState.h  AmsiEvidenceRecorder.h  AmsiScanEngine.h  CommandJournalStore.h  ContextAwareness.h  ControlPlaneClient.h  CryptoUtils.h  DestinationEnforcementBridge.h  DestinationEventRecorder.h  DestinationProtection.h  DestinationRuntimeStore.h  DestinationVerdictEngine.h  DeviceInventoryCollector.h  DnsResolutionCache.h  EndpointClient.h  EventEnvelope.h  EvidenceRecorder.h  FileDeltaTracker.h  FileInventory.h  FileSnapshotCollector.h  HardeningManager.h  LocalControlChannel.h  LocalScanRunner.h  LocalSecurity.h  LocalStateStore.h  PatchOrchestrator.h  PhishingHeuristics.h  PolicySnapshot.h  ProcessDeltaTracker.h  ProcessInventory.h  ProcessSnapshotCollector.h  QuarantineStore.h  RealtimeProtectionBroker.h  RemediationEngine.h  ReputationLookup.h  RuntimeDatabase.h  RuntimeTrustValidator.h  ScanEngine.h  (+12 more)
agent/windows/service/src/: AgentConfig.cpp  AgentService.cpp  AmsiEvidenceRecorder.cpp  AmsiScanEngine.cpp  CommandJournalStore.cpp  ContextAwareness.cpp  ControlPlaneClient.cpp  CryptoUtils.cpp  DestinationEnforcementBridge.cpp  DestinationEventRecorder.cpp  DestinationProtection.cpp  DestinationVerdictEngine.cpp  DeviceInventoryCollector.cpp  EndpointClient.cpp  EventEnvelope.cpp  EvidenceRecorder.cpp  FileDeltaTracker.cpp  FileInventory.cpp  FileSnapshotCollector.cpp  HardeningManager.cpp  LocalControlChannel.cpp  LocalScanRunner.cpp  LocalSecurity.cpp  LocalStateStore.cpp  PatchOrchestrator.cpp  PhishingHeuristics.cpp  ProcessDeltaTracker.cpp  ProcessInventory.cpp  ProcessSnapshotCollector.cpp  QuarantineStore.cpp  RealtimeProtectionBroker.cpp  RemediationEngine.cpp  ReputationLookup.cpp  ReputationLookupPhase1.cpp  RuntimeDatabase.cpp  RuntimeTrustValidator.cpp  ScanEngine.cpp  SelfTestRunner.cpp  ServiceInventory.cpp  ServiceMain.cpp  (+7 more)
backend/: README.md  package-lock.json  package.json
backend/control-plane/: package.json  tsconfig.json
backend/src/: index.ts
docs/: ARCHITECTURE.md  AUTH_AUDIT_CONTROLS.md  DATA_MODEL.md  DEVICE_RISK_SCORING.md  EMAIL_SECURITY.md  Expansion Phase A — Email security gatew.md  Expansion Phase C — Identity and SaaS si.txt  Expansion Phase D — SOC operations, repo.md  LICENSING_PRINCIPLES.md  PRD.md  PRODUCTION_BASE_BACKLOG.md  RANSOMWARE_PHASE2.md  ROADMAP.md
frontend/: README.md
frontend/console/: next.config.mjs  package-lock.json  package.json  tsconfig.base.json  tsconfig.json  wrangler.toml
password_manager/: Cargo.toml  README.md
password_manager/docs/: ARCHITECTURE.md
schema/: telemetry.json
tmp-phase1-corpora/cleanware/: browser-download-log.txt  finance-summary.csv  hr-policy-update.md  installer-readme.txt  meeting-notes.txt
tmp-phase1-corpora/uk-business-software/: office-deployment-plan.txt  quickbooks-reporting-guide.md  sage-payroll-checklist.txt  vendor-software-inventory.csv  xero-reconciliation-notes.txt
tmp-phase1-exitcriteria/: phase1-exitcriteria-report.json
tmp-phase1-minifilter-edge/: minifilter-edgecase-report.json
tmp-phase1-minifilter-edge/runtime-case-00/: agent-runtime.db
tmp-phase1-minifilter-edge/runtime-case-01/: agent-runtime.db
tmp-phase1-minifilter-edge/runtime-case-02/: agent-runtime.db
tmp-phase1-minifilter-edge/runtime-case-03/: agent-runtime.db
tmp-phase1-minifilter-edge/runtime-case-04/: agent-runtime.db
tmp-phase1-minifilter-edge/runtime-case-05/: agent-runtime.db
tmp-phase1-minifilter-edge/runtime-case-06/: agent-runtime.db
tmp-phase1-minifilter-edge/samples/: edge-normal.txt  edge-script.ps1  edge-unicode-中文.ps1
tmp-phase3-hostile-fuzz/: hostile-input-fuzz-report.json
tmp-phase3-hostile-fuzz/runtime-0000/: agent-runtime.db
tmp-phase3-hostile-fuzz/runtime-0001/: agent-runtime.db
tmp-phase3-hostile-fuzz/runtime-0002/: agent-runtime.db
tmp-phase3-hostile-fuzz/runtime-0003/: agent-runtime.db
tmp-phase3-hostile-fuzz/runtime-0004/: agent-runtime.db
tmp-phase3-hostile-fuzz/runtime-0005/: agent-runtime.db
tmp-phase3-hostile-fuzz/runtime-0006/: agent-runtime.db
tmp-phase3-hostile-fuzz/runtime-0007/: agent-runtime.db
tmp-phase3-hostile-fuzz/runtime-0008/: agent-runtime.db
tmp-phase3-hostile-fuzz/runtime-0009/: agent-runtime.db
tmp-phase3-hostile-fuzz/runtime-0010/: agent-runtime.db
tmp-phase4-exitcriteria/: phase4-exitcriteria-report.json
tmp-phase5-exitcriteria/: phase5-exitcriteria-report.json
tmp-phase6-exitcriteria/: phase6-exitcriteria-report.json
tmp-runtime-db-test/: agent-runtime.db  agent-state.ini  telemetry-queue.tsv
tmp-scan-tests/: invoice.pdf.js  payload.ps1
(+542 files in other folders)
