[workspace]
members = [
  "crates/pm_core",
  "crates/pm_protocol",
  "crates/pm_client",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Proprietary"
version = "0.1.0"
authors = ["Fenrir Security"]
rust-version = "1.82"

[workspace.dependencies]
argon2 = "0.5"
base64ct = { version = "1.6", features = ["alloc"] }
chacha20poly1305 = "0.10"
hkdf = "0.12"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "macros", "parsing", "serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
zeroize = { version = "1", features = ["zeroize_derive"] }
